--- a/src/pages/contacts/contacts.html
+++ b/src/pages/contacts/contacts.html
@@ -9,10 +9,10 @@
   </head>
   <body class="bg-[#0F0F0F]">
     <nav class="nav bg-[#005B41] flex max-[380px]:flex-col lg:flex-row mb-4 text-gray-100">
-      <a href="" class="flex justify-center border border-black w-full p-5 hover:bg-[rgba(0,0,0,0.2)]">Todo</a>
-      <a href="" class="flex justify-center border border-black w-full p-5 hover:bg-[rgba(0,0,0,0.2)]">Favorites</a>
-      <a href="" class="flex justify-center border border-black w-full p-5 hover:bg-[rgba(0,0,0,0.2)]">Agregar</a>
-      <a href="" class="flex justify-center border border-black w-full p-5 hover:bg-[rgba(0,0,0,0.2)]">Perfil</a>
+      <a href="" class="flex justify-center border border-black w-full p-5 hover:bg-[rgba(0,0,0,0.2)] overflow-hidden break-words">Todo</a>
+      <a href="" class="flex justify-center border border-black w-full p-5 hover:bg-[rgba(0,0,0,0.2)] overflow-hidden break-words">Favorites</a>
+      <a href="" class="flex justify-center border border-black w-full p-5 hover:bg-[rgba(0,0,0,0.2)] overflow-hidden break-words">Add</a>
+      <a href="" class="flex justify-center border border-black w-full p-5 hover:bg-[rgba(0,0,0,0.2)] overflow-hidden break-words">Profile</a>
     </nav>
 
     <div class="main-container">
