--- a/src/pages/contacts/favorites.html
+++ b/src/pages/contacts/favorites.html
@@ -3,14 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../output.css" />
-    <title>Login</title>
+    <link rel="stylesheet" href="./output.css" />
+    <title>Favorites</title>
   </head>
   <body>
     <div class="w-screen h-screen bg-white flex justify-center items-center">
       <div class="login-container w-full h-full flex flex-col">
         <form
-          action=""
+          action="./pages/contacts/contacts.html"
           class="form h-full flex flex-col justify-center items-center"
         >
           <h1 class="text-black text-center text-4xl p-6">Login</h1>
