add in progress

--- a/src/pages/contacts/contacts.html
+++ b/src/pages/contacts/contacts.html
@@ -51,6 +51,7 @@
       </table>
     </div>
 
+    <!-- ! UPDATE MODAL -->
     <div
       id="update-modal"
       tabindex="-1"
@@ -67,11 +68,12 @@
             <h3
               class="text-xl font-semibold text-gray-900 dark:text-white lg:text-2xl"
             >
-              Terms of Service
+              Update contact
             </h3>
             <button
               type="button"
               class="ms-auto inline-flex h-8 w-8 items-center justify-center rounded-lg bg-transparent text-sm text-gray-400 hover:bg-gray-200 hover:text-gray-900 dark:hover:bg-gray-600 dark:hover:text-white"
+              id="x-close-modal"
             >
               <svg
                 class="h-3 w-3"
@@ -94,7 +96,7 @@
           <!-- Modal body -->
           <div class="space-y-6 p-6">
             <div class="">
-              <label for="">Name</label>
+              <label for="update-name" class="text-white">Name</label>
               <input
                 type="text"
                 class="w-full p-2 border border-gray-200 rounded-lg dark:border-gray-600"
@@ -102,7 +104,7 @@
               />
             </div>
             <div class="">
-              <label for="">Lastname</label>
+              <label for="update-lastname" class="text-white">Lastname</label>
               <input
                 type="text"
                 class="w-full p-2 border border-gray-200 rounded-lg dark:border-gray-600"
@@ -111,7 +113,7 @@
             </div>
 
             <div class="">
-              <label for="">Phone</label>
+              <label for="update-phone" class="text-white">Phone</label>
               <input
                 type="text"
                 class="w-full p-2 border border-gray-200 rounded-lg dark:border-gray-600"
@@ -120,7 +122,7 @@
             </div>
 
             <div class="">
-              <label for="">Email</label>
+              <label for="update-email" class="text-white">Email</label>
               <input
                 type="text"
                 class="w-full p-2 border border-gray-200 rounded-lg dark:border-gray-600"
@@ -129,7 +131,7 @@
             </div>
 
             <div class="flex">
-              <label for="">Favorite</label>
+              <label for="update-favorite" class="text-white">Favorite</label>
               <input
                 type="checkbox"
                 class="ml-2"
@@ -152,6 +154,117 @@
               type="button"
               class="rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:border-gray-500 dark:bg-gray-700 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
               id="cancel-update"
+            >
+              Cancel
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- ! ADD MODAL -->
+    <div
+      id="add-modal"
+      tabindex="-1"
+      aria-hidden="true"
+      class="fixed flex justify-center items-center top-0 z-50 w-full h-full p-4 bg-black/85 hidden"
+    >
+      <div class="relative flex justify-center max-h-full w-full max-w-2xl">
+        <!-- Modal content -->
+        <div class="relative rounded-lg bg-white shadow dark:bg-gray-700 w-[80%]">
+          <!-- Modal header -->
+          <div
+            class="flex items-start justify-between rounded-t border-b p-5 dark:border-gray-600"
+          >
+            <h3
+              class="text-xl font-semibold text-gray-900 dark:text-white lg:text-2xl"
+            >
+              Add contact
+            </h3>
+            <button
+              type="button"
+              class="ms-auto inline-flex h-8 w-8 items-center justify-center rounded-lg bg-transparent text-sm text-gray-400 hover:bg-gray-200 hover:text-gray-900 dark:hover:bg-gray-600 dark:hover:text-white"
+              id="x-close-add-modal"
+            >
+              <svg
+                class="h-3 w-3"
+                aria-hidden="true"
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 14 14"
+              >
+                <path
+                  stroke="currentColor"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"
+                />
+              </svg>
+              <span class="sr-only">Close modal</span>
+            </button>
+          </div>
+          <!-- Modal body -->
+          <div class="space-y-6 p-6">
+            <div class="">
+              <label for="update-name" class="text-white">Name</label>
+              <input
+                type="text"
+                class="w-full p-2 border border-gray-200 rounded-lg dark:border-gray-600"
+                id="add-name"
+              />
+            </div>
+            <div class="">
+              <label for="update-lastname" class="text-white">Lastname</label>
+              <input
+                type="text"
+                class="w-full p-2 border border-gray-200 rounded-lg dark:border-gray-600"
+                id="add-lastname"
+              />
+            </div>
+
+            <div class="">
+              <label for="update-phone" class="text-white">Phone</label>
+              <input
+                type="text"
+                class="w-full p-2 border border-gray-200 rounded-lg dark:border-gray-600"
+                id="add-phone"
+              />
+            </div>
+
+            <div class="">
+              <label for="update-email" class="text-white">Email</label>
+              <input
+                type="text"
+                class="w-full p-2 border border-gray-200 rounded-lg dark:border-gray-600"
+                id="add-email"
+              />
+            </div>
+
+            <div class="flex">
+              <label for="update-favorite" class="text-white">Favorite</label>
+              <input
+                type="checkbox"
+                class="ml-2"
+                id="add-favorite"
+              />
+            </div>
+          </div>
+          <!-- Modal footer -->
+          <div
+            class="flex items-center space-x-2 rtl:space-x-reverse rounded-b border-t border-gray-200 p-6 dark:border-gray-600"
+          >
+            <button
+              type="button"
+              class="rounded-lg bg-green-700 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+              id="add-contact"
+            >
+              Accept
+            </button>
+            <button
+              type="button"
+              class="rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:border-gray-500 dark:bg-gray-700 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
+              id="cancel-add"
             >
               Cancel
             </button>
