removing dark mode styles for modal-update

--- a/src/pages/contacts/contacts.html
+++ b/src/pages/contacts/contacts.html
@@ -60,19 +60,19 @@
     >
       <div class="relative flex justify-center max-h-full w-full max-w-2xl">
         <!-- Modal content -->
-        <div class="relative rounded-lg bg-white shadow dark:bg-gray-700 w-[80%]">
+        <div class="relative rounded-lg bg-white shadow bg-gray-700 w-[80%]">
           <!-- Modal header -->
           <div
-            class="flex items-start justify-between rounded-t border-b p-5 dark:border-gray-600"
+            class="flex items-start justify-between rounded-t border-b p-5 border-gray-600"
           >
             <h3
-              class="text-xl font-semibold text-gray-900 dark:text-white lg:text-2xl"
+              class="text-xl font-semibold text-gray-900 text-white lg:text-2xl"
             >
               Update contact
             </h3>
             <button
               type="button"
-              class="ms-auto inline-flex h-8 w-8 items-center justify-center rounded-lg bg-transparent text-sm text-gray-400 hover:bg-gray-200 hover:text-gray-900 dark:hover:bg-gray-600 dark:hover:text-white"
+              class="ms-auto inline-flex h-8 w-8 items-center justify-center rounded-lg bg-transparent text-sm text-gray-400 hover:bg-gray-200 hover:text-gray-900 hover:bg-gray-600 hover:text-white"
               id="x-close-modal"
             >
               <svg
@@ -99,7 +99,7 @@
               <label for="update-name" class="text-white">Name</label>
               <input
                 type="text"
-                class="w-full p-2 border border-gray-200 rounded-lg dark:border-gray-600"
+                class="w-full p-2 border border-gray-200 rounded-lg border-gray-600"
                 id="update-name"
               />
             </div>
@@ -107,7 +107,7 @@
               <label for="update-lastname" class="text-white">Lastname</label>
               <input
                 type="text"
-                class="w-full p-2 border border-gray-200 rounded-lg dark:border-gray-600"
+                class="w-full p-2 border border-gray-200 rounded-lg border-gray-600"
                 id="update-lastname"
               />
             </div>
@@ -116,7 +116,7 @@
               <label for="update-phone" class="text-white">Phone</label>
               <input
                 type="text"
-                class="w-full p-2 border border-gray-200 rounded-lg dark:border-gray-600"
+                class="w-full p-2 border border-gray-200 rounded-lg border-gray-600"
                 id="update-phone"
               />
             </div>
@@ -125,7 +125,7 @@
               <label for="update-email" class="text-white">Email</label>
               <input
                 type="text"
-                class="w-full p-2 border border-gray-200 rounded-lg dark:border-gray-600"
+                class="w-full p-2 border border-gray-200 rounded-lg border-gray-600"
                 id="update-email"
               />
             </div>
@@ -141,18 +141,18 @@
           </div>
           <!-- Modal footer -->
           <div
-            class="flex items-center space-x-2 rtl:space-x-reverse rounded-b border-t border-gray-200 p-6 dark:border-gray-600"
+            class="flex items-center space-x-2 rtl:space-x-reverse rounded-b border-t border-gray-200 p-6 border-gray-600"
           >
             <button
               type="button"
-              class="rounded-lg bg-green-700 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+              class="rounded-lg bg-green-700 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 bg-green-600 hover:bg-green-700 focus:ring-green-800"
               id="update-contact"
             >
               Accept
             </button>
             <button
               type="button"
-              class="rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:border-gray-500 dark:bg-gray-700 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
+              class="rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 border-gray-500 bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white"
               id="cancel-update"
             >
               Cancel
@@ -171,19 +171,19 @@
     >
       <div class="relative flex justify-center max-h-full w-full max-w-2xl">
         <!-- Modal content -->
-        <div class="relative rounded-lg bg-white shadow dark:bg-gray-700 w-[80%]">
+        <div class="relative rounded-lg bg-white shadow bg-gray-700 w-[80%]">
           <!-- Modal header -->
           <div
-            class="flex items-start justify-between rounded-t border-b p-5 dark:border-gray-600"
+            class="flex items-start justify-between rounded-t border-b p-5 border-gray-600"
           >
             <h3
-              class="text-xl font-semibold text-gray-900 dark:text-white lg:text-2xl"
+              class="text-xl font-semibold text-gray-900 text-white lg:text-2xl"
             >
               Add contact
             </h3>
             <button
               type="button"
-              class="ms-auto inline-flex h-8 w-8 items-center justify-center rounded-lg bg-transparent text-sm text-gray-400 hover:bg-gray-200 hover:text-gray-900 dark:hover:bg-gray-600 dark:hover:text-white"
+              class="ms-auto inline-flex h-8 w-8 items-center justify-center rounded-lg bg-transparent text-sm text-gray-400 hover:bg-gray-200 hover:text-gray-900 hover:bg-gray-600 hover:text-white"
               id="x-close-add-modal"
             >
               <svg
@@ -210,7 +210,7 @@
               <label for="update-name" class="text-white">Name</label>
               <input
                 type="text"
-                class="w-full p-2 border border-gray-200 rounded-lg dark:border-gray-600"
+                class="w-full p-2 border border-gray-200 rounded-lg border-gray-600"
                 id="add-name"
               />
             </div>
@@ -218,7 +218,7 @@
               <label for="update-lastname" class="text-white">Lastname</label>
               <input
                 type="text"
-                class="w-full p-2 border border-gray-200 rounded-lg dark:border-gray-600"
+                class="w-full p-2 border border-gray-200 rounded-lg border-gray-600"
                 id="add-lastname"
               />
             </div>
@@ -227,7 +227,7 @@
               <label for="update-phone" class="text-white">Phone</label>
               <input
                 type="text"
-                class="w-full p-2 border border-gray-200 rounded-lg dark:border-gray-600"
+                class="w-full p-2 border border-gray-200 rounded-lg border-gray-600"
                 id="add-phone"
               />
             </div>
@@ -236,7 +236,7 @@
               <label for="update-email" class="text-white">Email</label>
               <input
                 type="text"
-                class="w-full p-2 border border-gray-200 rounded-lg dark:border-gray-600"
+                class="w-full p-2 border border-gray-200 rounded-lg border-gray-600"
                 id="add-email"
               />
             </div>
@@ -252,18 +252,18 @@
           </div>
           <!-- Modal footer -->
           <div
-            class="flex items-center space-x-2 rtl:space-x-reverse rounded-b border-t border-gray-200 p-6 dark:border-gray-600"
+            class="flex items-center space-x-2 rtl:space-x-reverse rounded-b border-t border-gray-200 p-6 border-gray-600"
           >
             <button
               type="button"
-              class="rounded-lg bg-green-700 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 dark:bg-green-600 dark:hover:bg-green-700 dark:focus:ring-green-800"
+              class="rounded-lg bg-green-700 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 bg-green-600 hover:bg-green-700 focus:ring-green-800"
               id="add-contact"
             >
               Accept
             </button>
             <button
               type="button"
-              class="rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 dark:border-gray-500 dark:bg-gray-700 dark:text-gray-300 dark:hover:bg-gray-600 dark:hover:text-white"
+              class="rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 border-gray-500 bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white"
               id="cancel-add"
             >
               Cancel
