fixing colors of modals

--- a/src/pages/contacts/contacts.html
+++ b/src/pages/contacts/contacts.html
@@ -60,13 +60,13 @@
     >
       <div class="relative flex justify-center max-h-full w-full max-w-2xl">
         <!-- Modal content -->
-        <div class="relative rounded-lg bg-white shadow bg-gray-700 w-[80%]">
+        <div class="relative rounded-lg shadow bg-gray-700 w-[80%]">
           <!-- Modal header -->
           <div
             class="flex items-start justify-between rounded-t border-b p-5 border-gray-600"
           >
             <h3
-              class="text-xl font-semibold text-gray-900 text-white lg:text-2xl"
+              class="text-xl font-semibold text-white lg:text-2xl"
             >
               Update contact
             </h3>
@@ -99,7 +99,7 @@
               <label for="update-name" class="text-white">Name</label>
               <input
                 type="text"
-                class="w-full p-2 border border-gray-200 rounded-lg border-gray-600"
+                class="w-full p-2 border  rounded-lg border-gray-600"
                 id="update-name"
               />
             </div>
@@ -107,7 +107,7 @@
               <label for="update-lastname" class="text-white">Lastname</label>
               <input
                 type="text"
-                class="w-full p-2 border border-gray-200 rounded-lg border-gray-600"
+                class="w-full p-2 border  rounded-lg border-gray-600"
                 id="update-lastname"
               />
             </div>
@@ -116,7 +116,7 @@
               <label for="update-phone" class="text-white">Phone</label>
               <input
                 type="text"
-                class="w-full p-2 border border-gray-200 rounded-lg border-gray-600"
+                class="w-full p-2 border  rounded-lg border-gray-600"
                 id="update-phone"
               />
             </div>
@@ -124,8 +124,8 @@
             <div class="">
               <label for="update-email" class="text-white">Email</label>
               <input
-                type="text"
-                class="w-full p-2 border border-gray-200 rounded-lg border-gray-600"
+                type="email"
+                class="w-full p-2 border  rounded-lg border-gray-600"
                 id="update-email"
               />
             </div>
@@ -141,7 +141,7 @@
           </div>
           <!-- Modal footer -->
           <div
-            class="flex items-center space-x-2 rtl:space-x-reverse rounded-b border-t border-gray-200 p-6 border-gray-600"
+            class="flex items-center space-x-2 rtl:space-x-reverse rounded-b border-t  p-6 border-gray-600"
           >
             <button
               type="button"
@@ -152,7 +152,7 @@
             </button>
             <button
               type="button"
-              class="rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 border-gray-500 bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white"
+              class="rounded-lg border border-gray-200 px-5 py-2.5 text-sm font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 border-gray-500 bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white"
               id="cancel-update"
             >
               Cancel
@@ -171,13 +171,13 @@
     >
       <div class="relative flex justify-center max-h-full w-full max-w-2xl">
         <!-- Modal content -->
-        <div class="relative rounded-lg bg-white shadow bg-gray-700 w-[80%]">
+        <div class="relative rounded-lg shadow bg-gray-700 w-[80%]">
           <!-- Modal header -->
           <div
             class="flex items-start justify-between rounded-t border-b p-5 border-gray-600"
           >
             <h3
-              class="text-xl font-semibold text-gray-900 text-white lg:text-2xl"
+              class="text-xl font-semibold text-white lg:text-2xl"
             >
               Add contact
             </h3>
@@ -207,7 +207,7 @@
           <!-- Modal body -->
           <div class="space-y-6 p-6">
             <div class="">
-              <label for="update-name" class="text-white">Name</label>
+              <label for="add-name" class="text-white">Name</label>
               <input
                 type="text"
                 class="w-full p-2 border border-gray-200 rounded-lg border-gray-600"
@@ -215,7 +215,7 @@
               />
             </div>
             <div class="">
-              <label for="update-lastname" class="text-white">Lastname</label>
+              <label for="add-lastname" class="text-white">Lastname</label>
               <input
                 type="text"
                 class="w-full p-2 border border-gray-200 rounded-lg border-gray-600"
@@ -224,7 +224,7 @@
             </div>
 
             <div class="">
-              <label for="update-phone" class="text-white">Phone</label>
+              <label for="add-phone" class="text-white">Phone</label>
               <input
                 type="text"
                 class="w-full p-2 border border-gray-200 rounded-lg border-gray-600"
@@ -233,7 +233,7 @@
             </div>
 
             <div class="">
-              <label for="update-email" class="text-white">Email</label>
+              <label for="add-email" class="text-white">Email</label>
               <input
                 type="text"
                 class="w-full p-2 border border-gray-200 rounded-lg border-gray-600"
@@ -242,7 +242,7 @@
             </div>
 
             <div class="flex">
-              <label for="update-favorite" class="text-white">Favorite</label>
+              <label for="add-favorite" class="text-white">Favorite</label>
               <input
                 type="checkbox"
                 class="ml-2"
@@ -259,11 +259,11 @@
               class="rounded-lg bg-green-700 px-5 py-2.5 text-center text-sm font-medium text-white hover:bg-green-800 focus:outline-none focus:ring-4 focus:ring-green-300 bg-green-600 hover:bg-green-700 focus:ring-green-800"
               id="add-contact"
             >
-              Accept
+              Add
             </button>
             <button
               type="button"
-              class="rounded-lg border border-gray-200 bg-white px-5 py-2.5 text-sm font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 border-gray-500 bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white"
+              class="rounded-lg border border-gray-200 px-5 py-2.5 text-sm font-medium text-gray-500 hover:bg-gray-100 hover:text-gray-900 focus:z-10 focus:outline-none focus:ring-4 focus:ring-blue-300 border-gray-500 bg-gray-700 text-gray-300 hover:bg-gray-600 hover:text-white"
               id="cancel-add"
             >
               Cancel
